--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
         <a href="/">RUN BUDDY</a>
     </h1>
     <nav>
-        <!--Unordered list element -->
-        <ul>
-            <!--List item element-->
-            <li>
-                <!-- anchor element -->
-                <a href="#what-we-do">What We Do</a>
-            </li>
-            <li>
-                <a href="#what-you-do">What You Do</a>
-            </li>
-            <li>
-                <a href="#your-trainers">Your Trainers</a>
-            </li>
-            <li>
-                <a href="#reach-out">Reach Out</a>
-            </li>
-        </ul>
+      <!--Unordered list element -->
+      <ul>
+        <!--List item element-->
+        <li>
+          <!-- anchor element -->
+          <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+          <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+          <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+            <a href="#reach-out">Reach Out</a>
+        </li>
+      </ul>
     </nav>
   </header>
 
@@ -61,6 +61,10 @@
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
+    <div>
+      <a href="#">Read Our Privacy Policy</a><br />
+      &copy; 2019 Run Buddy, Inc.
+    </div>
   </footer>
 </body>
 
