--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
     </div>
   </section>
 
-  <!-- hero/jumbotron -->
-  <section>
-  </section>
-
   <!-- "what we do" section -->
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
@@ -78,7 +74,7 @@
 
   <!-- "what you do" section -->
   <section id="what-you-do" class="steps">
-    <h2 class="section-title seccondary-border">What You Do</h2>
+    <h2 class="section-title secondary-border">What You Do</h2>
 
     <div>
       <!--insert this img element-->
@@ -102,13 +98,49 @@
     <div>
       <img src="./assets/images/step-4.svg" alt="" />
       <h3>Step 4: <span>See Results</span></h3>
-      <p>Bi-weekly checkins with you trainer will keep you focused</p>
+      <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
 
   <!-- "meet the trainers" section -->
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p> 
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+
+    <!--second trainer bio-->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
   </section>
 
   <!-- "reach out" section -->
