--- a/index.html
+++ b/index.html
@@ -146,6 +146,32 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2894.529316491833!2d-80.58914578414814!3d43.49129227090249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf1279fe7904d%3A0xb8ad0b8849559eae!2s558%20Pinery%20Trail%2C%20Waterloo%2C%20ON%20N2V%202S3!5e0!3m2!1sen!2sca!4v1645480537096!5m2!1sen!2sca" 
+      width="400" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+      </iframe>
+    </div>
+
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up?
+        <br />
+        Let us know and we'll be happy to talk to you! 
+      </p>
+      <address>
+        55 Main Street <br/>
+        Some Torn, Ca <br/>
+        12345<br />
+        P: 555.RUN.BUDZ (555.786.2839)<br/>
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
+
   </section>
 
   <!-- footer -->
