--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   </section>
 
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2894.529316491833!2d-80.58914578414814!3d43.49129227090249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf1279fe7904d%3A0xb8ad0b8849559eae!2s558%20Pinery%20Trail%2C%20Waterloo%2C%20ON%20N2V%202S3!5e0!3m2!1sen!2sca!4v1645480537096!5m2!1sen!2sca" 
       width="400" 
@@ -156,7 +156,7 @@
       </iframe>
     </div>
 
-    <div>
+    <div class="text-right">
       <h3>Run Buddy</h3>
       <p>
         Any questions or concerns before signing up?
