--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
       allowfullscreen="" 
       loading="lazy">
       </iframe>
-
       <div>
         <h3>Run Buddy</h3>
         <p>
@@ -164,7 +163,7 @@
         </p>
         <address>
           55 Main Street <br/>
-          Some Torn, Ca <br/>
+          Some Town, Ca <br/>
           12345<br />
           P: 555.RUN.BUDZ (555.786.2839)<br/>
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
@@ -178,7 +177,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
