--- a/index.html
+++ b/index.html
@@ -201,25 +201,6 @@
       </h2>
     </div>
     <div class="contact-info">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2894.529316491833!2d-80.58914578414814!3d43.49129227090249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf1279fe7904d%3A0xb8ad0b8849559eae!2s558%20Pinery%20Trail%2C%20Waterloo%2C%20ON%20N2V%202S3!5e0!3m2!1sen!2sca!4v1645480537096!5m2!1sen!2sca" 
-      width="400" 
-      height="400" 
-      style="border:0;" 
-      allowfullscreen="" 
-      loading="lazy">
-      </iframe>
-      <div class="contact-form">
-        <h3>Contact Us</h3>
-        <form>
-          <label for="contact-name">Your Name</label>
-          <input type="text" id="contact-name" placeholder="Your Name" />
-
-          <label for="contact-message">Message</label>
-          <textarea id="contact-message" placeholder="Message"></textarea>
-
-          <button type="submit">Submit</button>
-        </form>
-      </div>
       <div>
         <h3>Run Buddy</h3>
         <p>
@@ -234,7 +215,29 @@
           P: 555.RUN.BUDZ (555.786.2839)<br/>
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
+
       </div>
+
+      <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form>
+          <label for="contact-name">Your Name</label>
+          <input type="text" id="contact-name" placeholder="Your Name" />
+
+          <label for="contact-message">Message</label>
+          <textarea id="contact-message" placeholder="Message"></textarea>
+
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2894.529316491833!2d-80.58914578414814!3d43.49129227090249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf1279fe7904d%3A0xb8ad0b8849559eae!2s558%20Pinery%20Trail%2C%20Waterloo%2C%20ON%20N2V%202S3!5e0!3m2!1sen!2sca!4v1645480537096!5m2!1sen!2sca" 
+      frameborder="0"
+      style="border:0;" 
+      allowfullscreen="" >
+      </iframe>
+      
+
     </div>
 
   </section>
