--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
         Reach Out
       </h2>
     </div>
-    <div class="contact-info">
+
+    <div class="contact-info"> 
+
       <div>
         <h3>Run Buddy</h3>
         <p>
@@ -208,6 +210,7 @@
           <br />
           Let us know and we'll be happy to talk to you! 
         </p>
+
         <address>
           55 Main Street <br/>
           Some Town, Ca <br/>
@@ -215,7 +218,6 @@
           P: 555.RUN.BUDZ (555.786.2839)<br/>
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
-
       </div>
 
       <div class="contact-form">
@@ -233,10 +235,9 @@
 
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2894.529316491833!2d-80.58914578414814!3d43.49129227090249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf1279fe7904d%3A0xb8ad0b8849559eae!2s558%20Pinery%20Trail%2C%20Waterloo%2C%20ON%20N2V%202S3!5e0!3m2!1sen!2sca!4v1645480537096!5m2!1sen!2sca" 
       frameborder="0"
-      style="border:0;" 
-      allowfullscreen="" >
+      style="border:0" 
+      allowfullscreen>
       </iframe>
-      
 
     </div>
 
